--- a/alexandria/lmnl-grammar/pom.xml
+++ b/alexandria/lmnl-grammar/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>antlr4-runtime</artifactId>
             <version>4.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
         <!-- test dependencies -->
         <dependency>
